# tdb-succinct

./: Cargo.toml  LICENSE  README.md
src/: adjacencylist.rs  bitarray.rs  bitindex.rs  lib.rs  logarray.rs  wavelettree.rs
src/storage/: file.rs  memory.rs  mod.rs  types.rs
src/tfc/: block.rs  datatypes.rs  dict.rs  file.rs  stream.rs  typed.rs
