[package]
name = "tdb-succinct"
version = "0.1.1"
authors = [
    "Matthijs van Otterdijk <matthijs@terminusdb.com>",
    "Gavin Mendel-Gleason <gavin@terminusdb.com>"
]
edition = "2021"
license = "Apache-2.0"
description = "succinct data structures used by terminusdb"
homepage = "https://terminusdb.com"
repository = "https://github.com/terminusdb-labs/tdb-succinct"
documentation = "https://docs.rs/tdb-succinct/"
exclude = [".gitignore", ".github/", "/ci/"]

[dependencies]
async-trait = "0.1.77"
base64 = "0.21.7"
bitvec = "1.0.1"
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.34"
futures = "0.3.30"
hex = "0.4.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
regex = "1.10.3"
rug = "1.24.0"
thiserror = "1.0.57"
tokio = {version="1.36.0", features=["io-util", "macros", "rt", "fs"]}
tokio-util = {version="0.7.10", features=["codec"]}
